sema/testdata/gcc-c99-extra/reject/pr35746.c
int foo(int i);

void bar()
{
  __complex__ int i;
  X j;
  if (i = foo(j))
    ;
}
